--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
       <section id="Studio" class="studio">
         <div class="container container-main-studio">
           <h1 class="h-one">Effective Solutions for Your Business</h1>
-          <div class="studio-button">
-            <button type="button" class="button">Order Service</button>
-          </div>
+          <button type="button" class="button">Order Service</button>
         </div>
       </section>
       <!-- кінець 1 секції Studio -->
@@ -100,8 +98,8 @@
       <section id="#Contacts" class="contacts">
         <div class="container container-main-contacts">
           <h2 class="contacts-h-two-team">Our Team</h2>
-          <ul>
-            <li class="list-contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
               <img
                 src="./images/markguerrero.jpg"
                 alt="Mark Guerrero"
@@ -110,12 +108,12 @@
               <h3 class="contacts-h-three-team">Mark Guerrero</h3>
               <p class="contacts-info">Product Designer</p>
             </li>
-            <li class="list-contacts">
+            <li class="contacts-item">
               <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
               <h3 class="contacts-h-three-team">Tom Ford</h3>
               <p class="contacts-info">Frontend Developer</p>
             </li>
-            <li class="list-contacts">
+            <li class="contacts-item">
               <img
                 src="./images/camilagarcia.jpg"
                 alt="Camila Garcia"
@@ -124,7 +122,7 @@
               <h3 class="contacts-h-three-team">Camila Garcia</h3>
               <p class="contacts-info">Marketing</p>
             </li>
-            <li class="list-contacts">
+            <li class="contacts-item">
               <img
                 src="./images/danielwilson.jpg"
                 alt="Daniel Wilson"
@@ -142,66 +140,78 @@
       <section class="port">
         <div class="container container-main-ourportfolio">
           <h2 class="h-two-port">Our Portfolio</h2>
-          <ul>
-            <li class="port-list">
+          <ul class="port-list">
+            <li class="port-item">
               <img
                 src="./images/bankingapp.jpg"
                 alt="Banking App"
                 width="360"
                 height="300"
               />
-              <h3 class="h-three-port">Banking App</h3>
-              <p class="port-info">App</p>
+              <div class="port-info-container">
+                <h3 class="h-three-port">Banking App</h3>
+                <p class="port-info">App</p>
+              </div>
             </li>
-            <li class="port-list">
+            <li class="port-item">
               <img
                 src="./images/cashlesspayment.jpg"
                 alt="Cashless Payment"
                 width="360"
                 height="300"
               />
-              <h3 class="h-three-port">Cashless Payment</h3>
-              <p class="port-info">Marketing</p>
+              <div class="port-info-container">
+                <h3 class="h-three-port">Cashless Payment</h3>
+                <p class="port-info">Marketing</p>
+              </div>
             </li>
-            <li class="port-list">
+            <li class="port-item">
               <img
                 src="./images/meditationapp.jpg"
                 alt="Meditation App"
                 width="360"
                 height="300"
               />
-              <h3 class="h-three-port">Meditation App</h3>
-              <p class="port-info">App</p>
+              <div class="port-info-container">
+                <h3 class="h-three-port">Meditation App</h3>
+                <p class="port-info">App</p>
+              </div>
             </li>
-            <li class="port-list">
+            <li class="port-item">
               <img
                 src="./images/taxiservice.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
               />
-              <h3 class="h-three-port">Taxi Service</h3>
-              <p class="port-info">Marketing</p>
+              <div class="port-info-container">
+                <h3 class="h-three-port">Taxi Service</h3>
+                <p class="port-info">Marketing</p>
+              </div>
             </li>
-            <li class="port-list">
+            <li class="port-item">
               <img
                 src="./images/screenillustrations.jpg"
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
               />
-              <h3 class="h-three-port">Screen Illustrations</h3>
-              <p class="port-info">Design</p>
+              <div class="port-info-container">
+                <h3 class="h-three-port">Screen Illustrations</h3>
+                <p class="port-info">Design</p>
+              </div>
             </li>
-            <li class="port-list">
+            <li class="port-item">
               <img
                 src="./images/onlinecourses.jpg"
                 alt="Online Courses"
                 width="360"
                 height="300"
               />
-              <h3 class="h-three-port">Online Courses</h3>
-              <p class="port-info">Marketing</p>
+              <div class="port-info-container">
+                <h3 class="h-three-port">Online Courses</h3>
+                <p class="port-info">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -209,14 +219,16 @@
       <!-- кінець 4 секції Our Portfolio -->
     </main>
     <footer class="box-footer">
-      <div class="container container-footer">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-footer">Studio</span></a
-        >
-        <p class="info-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container">
+        <div class="container-footer">
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <p class="info-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
