--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </ul>
         </nav>
         <address class="box-address">
-          <ul>
+          <ul class="list-adress">
             <li>
               <a href="mailto:info@devstudio.com" class="mail-tel"
                 >info@devstudio.com</a
@@ -69,21 +69,21 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="portfolio-item01">
               <h3 class="portfolio-h-three">Punctuality</h3>
               <p class="portfolio-h-three-info">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="portfolio-item01">
               <h3 class="portfolio-h-three">Diligence</h3>
               <p class="portfolio-h-three-info">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="portfolio-item01">
               <h3 class="portfolio-h-three">Technologies</h3>
               <p class="portfolio-h-three-info">
                 Design practice focused on digital experiences. We bring forth a
@@ -105,13 +105,17 @@
                 alt="Mark Guerrero"
                 width="264"
               />
-              <h3 class="contacts-h-three-team">Mark Guerrero</h3>
-              <p class="contacts-info">Product Designer</p>
+              <div class="contacts-container-info">
+                <h3 class="contacts-h-three-team">Mark Guerrero</h3>
+                <p class="contacts-info">Product Designer</p>
+              </div>
             </li>
             <li class="contacts-item">
               <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
-              <h3 class="contacts-h-three-team">Tom Ford</h3>
-              <p class="contacts-info">Frontend Developer</p>
+              <div class="contacts-container-info">
+                <h3 class="contacts-h-three-team">Tom Ford</h3>
+                <p class="contacts-info">Frontend Developer</p>
+              </div>
             </li>
             <li class="contacts-item">
               <img
@@ -119,8 +123,10 @@
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="contacts-h-three-team">Camila Garcia</h3>
-              <p class="contacts-info">Marketing</p>
+              <div class="contacts-container-info">
+                <h3 class="contacts-h-three-team">Camila Garcia</h3>
+                <p class="contacts-info">Marketing</p>
+              </div>
             </li>
             <li class="contacts-item">
               <img
@@ -128,8 +134,10 @@
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="contacts-h-three-team">Daniel Wilson</h3>
-              <p class="contacts-info">UI Designer</p>
+              <div class="contacts-container-info">
+                <h3 class="contacts-h-three-team">Daniel Wilson</h3>
+                <p class="contacts-info">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -219,16 +227,14 @@
       <!-- кінець 4 секції Our Portfolio -->
     </main>
     <footer class="box-footer">
-      <div class="container">
-        <div class="container-footer">
-          <a href="./index.html" class="logo"
-            >Web<span class="logo-footer">Studio</span></a
-          >
-          <p class="info-footer">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+      <div class="container container-footer">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <p class="info-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
