--- a/index.html
+++ b/index.html
@@ -62,28 +62,28 @@
         <div class="container container-main-portfolio">
           <h2 class="visually-hidden">Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="portfolio-item01">
+            <li class="portfolio-item">
               <h3 class="portfolio-h-three">Strategy</h3>
               <p class="portfolio-h-three-info">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="portfolio-item01">
+            <li class="portfolio-item">
               <h3 class="portfolio-h-three">Punctuality</h3>
               <p class="portfolio-h-three-info">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="portfolio-item01">
+            <li class="portfolio-item">
               <h3 class="portfolio-h-three">Diligence</h3>
               <p class="portfolio-h-three-info">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li class="portfolio-item01">
+            <li class="portfolio-item">
               <h3 class="portfolio-h-three">Technologies</h3>
               <p class="portfolio-h-three-info">
                 Design practice focused on digital experiences. We bring forth a
@@ -228,7 +228,7 @@
     </main>
     <footer class="box-footer">
       <div class="container container-footer">
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo-link"
           >Web<span class="logo-footer">Studio</span></a
         >
         <p class="info-footer">
